# msc-project

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  baseline.py  project_files.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
__tests__/analysis/: test_analysis_utils.py
algorithms/: ga_optimiser.py
analysis/: analysis.ipynb  analysis_utils.py  models.txt
experiments/: baseline.ipynb  compute_resource_requirements.py  custom_backdoor_function.py  experiment_genetic_algorithm.py  ga_evaluation.ipynb  ga_optimise_stepmlp.py  ga_run_dist_aware_fitness_func.py  ga_run_magnitude_aware_fitness_func.py  ga_run_simple_fitness_func.py  genetic_algorithm.py  noise_robustness.py  scratch.ipynb  test.py  utils.py
experiments/results/: stepml_no_optim
histograms/stepmlp/: stepmlp_param_distribution_10models_c=20_l=1_n=3.pkl  stepmlp_param_distribution_10models_c=448_l=6_n=24.pkl  stepmlp_param_distribution_5models_c=20_l=1_n=3.pkl
models/: backdoored_model.py  positional_encoding.py  standard_language_model.py
results/experiment_noise_tolerance/: model_comparison.json
results/genetic_algorithm_experiments/: results.csv  results.md
results/random_circuit/: results.md
tests/: constants.py  helpers.py
tests/analysis/: test_analysis_mlp_layers.py  test_analysis_utils.py
tests/circuits_custom/: test_custom_backdoors.py  test_custom_logic_gates.py
tests/evaluation/: test_metrics.py  test_utils.py
tests/ga_experiments/: test_ga_objectives.py  test_genetic_algorithm.py  test_utils.py
(+638 files in other folders)
