[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msc_project"
version = "0.0.1"
authors = [
  { name="Bella Jakob", email="annabel.s.jakob@gmail.com" },
]
description = "A short description of your project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "einops",
    "jax",
    "jaxlib",
    "matplotlib",
    "numpy",
    "transformer_lens",
    "tqdm",
    "pygad",
    "graphviz",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 104
target-version = ['py38']
include = '\.pyi?$'